tests/pos/with-type-operator.scala
//> using options -Werror

def foo: Int with String = ??? // warn
